[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
version = "0.1.0"
authors = [
  { name="Tovmasian Arman", email="arman-nn04@mail.ru" },
]
description = "Computatinal graph"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
install_requires = [
"click >= 8.1.3"
]

[tool.setuptools.packages.find]
where = ["compgraph"]
include = ["pkg*"]